OPEN - issue SPAGOBI-1881: As final user I want sort the values by rows and columns headers https://www.spagoworld.org/jira/browse/SPAGOBI-1881 (add the scrollbar)
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_5.x/Server/trunk@23722 99afaf0d-6903-0410-885a-c66a8bbb5f81

--- a/SpagoBICockpitEngine/WebContent/css/cockpit.css
+++ b/SpagoBICockpitEngine/WebContent/css/cockpit.css
@@ -738,9 +738,13 @@
     padding-right:0px; 			
 }
 
-
 .tableWidget .x-grid-cell:hover {
     background-color: #D1D1D1;
 }
+
+.widget-crosstab{
+	padding: 2px;
+}
+
 	
 } /* END MEDIA SCREEN*/		
